--- a/config/kindle_sale_uwsgi.ini
+++ b/config/kindle_sale_uwsgi.ini
@@ -13,6 +13,7 @@ pythonpath = %(base)
 #socket file's location
 socket = localhost:8000
 
+# socket file
 #permissions for the socket file
 #chmod-socket    = 666
 
